# Polytech-S7-S8

./: README.md
EIECIE7/: README.md
EIEISE7/: README.md
EIENAL7/: README.md
EIENMI7/: TP1.html  TP1.md
EIENMI7/Labs/TD1 - CS/: BasicExamplesTP2.sln
EIENMI7/Labs/TD1-JMS/: .gitignore  pom.xml
EIENMI7/Labs/TD2/: td2.md
EIIN714/: README.md
EIIN714/class/: CM1.md  CM2.md  CM3.md  CM4.md  CM5.md  CM6.md  CM7.md  CM8.md
EIIN714/labs/td01/: CMakeLists.txt  automate.cpp  bookmaker.cpp  cmpx.cpp  moyenne.cpp  palindromes.cpp  records.txt
EIIN714/labs/td02/: CMakeLists.txt  Rat.cpp
EIIN714/labs/td03/: CMakeLists.txt  Makefile  date.cpp  date.h  main_date.cpp
EIIN714/labs/td04/: CMakeLists.txt  MVector.cpp  MVector.h
EIIN714/labs/td05/: CMakeLists.txt  Matrix.cpp  Matrix.h
EIIN714/labs/td06/: CMakeLists.txt  DiagonalMatrix.cpp  DiagonalMatrix.h  Matrix.cpp  Matrix.h  ScalarMatrix.cpp  ScalarMatrix.h  SquareMatrix.cpp  SquareMatrix.h
EIIN714/labs/td07/: CMakeLists.txt  Cell.h  List.cpp  List.h  main_list_simple.cpp
EIIN714/labs/td08/: CMakeLists.txt  list-copy.h  main_list_copy.cpp
EIIN714/labs/td08-questions/: enonce.txt  exo1.cpp  exo2.cpp  exo3.cpp  exo4.cpp  exo5.cpp  exo6.cpp  exo7.cpp  exo8.cpp
EIIN714/labs/td0A/: CMakeLists.txt  billc.ppm  billc2.ppm  billc3.ppm  image.cpp  image.h  main_image.cpp  pixel.h
EIIN716/: README.md
EIIN716/labs/: TD1-2.mdj
EIIN726/: README.md
EIIN726/labs/TD1/: intro.ipynb
EIIN726/labs/TD2/: fashion_mnist_tree.dot  mnist_tree.dot  mnist_tree_hyperparameters.csv
EIIN726/labs/TD3/: 3d-scatter.html  (+2 more)
(+39 files in other folders)
